# Qwen3-TTS

./: .gitignore  README.md  pyproject.toml  shell.nix
examples/: stream_voice_design_single_demo.py  test_model_12hz_base.py  test_model_12hz_custom_voice.py  test_model_12hz_custom_voice_hybrid.py  test_model_12hz_voice_design.py  test_model_12hz_voice_merge.py  test_tokenizer_12hz.py
finetuning/: README.md  dataset.py  prepare_data.py  sft_12hz.py
qwen_tts/: __init__.py  __main__.py  audio_utils.py  prompt_layout.py
qwen_tts/cli/: demo.py
qwen_tts/core/: __init__.py  config.py
qwen_tts/core/models/: __init__.py  configuration_qwen3_tts.py  modeling_qwen3_tts.py  modeling_qwen3_tts_attention.py  modeling_qwen3_tts_base.py  modeling_qwen3_tts_core.py  modeling_qwen3_tts_custom_voice.py  modeling_qwen3_tts_generation.py  modeling_qwen3_tts_generation_embeddings.py  modeling_qwen3_tts_generation_runner.py  modeling_qwen3_tts_generation_validation.py  modeling_qwen3_tts_speaker.py  modeling_qwen3_tts_talker.py  modeling_qwen3_tts_talker_model.py  modeling_qwen3_tts_talker_predictor.py  modeling_qwen3_tts_types.py  modeling_qwen3_tts_voice_clone.py  modeling_qwen3_tts_voice_design.py  processing_qwen3_tts.py
qwen_tts/inference/: __init__.py  base.py  custom_voice.py  qwen3_tts_base_model.py  qwen3_tts_custom_voice_model.py  qwen3_tts_model.py  qwen3_tts_tokenizer.py  qwen3_tts_tokenizer_audio_mixin.py  qwen3_tts_tokenizer_decode_mixin.py  qwen3_tts_voice_clone_model.py  qwen3_tts_voice_design_model.py  voice_clone.py  voice_clone_prompt_item.py  voice_design.py  voice_design_single_streamer.py
(+19 files in other folders)
